force-app/main/default/objects/MUSW__RESTSettingFields_Push__c/MUSW__RESTSettingFields_Push__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Specifies field mappings for REST services defined in REST Settings (push requests)</description>
    <label>REST Setting Fields - Push</label>
</CustomObject>