force-app/main/default/objects/MUSW__RESTSettingFields_Push__c/fields/MUSW__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Field_Name__c</fullName>
    <description>Name of the destination field (eg. GIS.DBO.Owners.AssesseeName)</description>
    <inlineHelpText>Name of the destination field (eg. GIS.DBO.Owners.AssesseeName)</inlineHelpText>
    <label>REST Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>