force-app/main/default/objects/MUSW__RESTSettingFields_Push__c/fields/MUSW__isActive__c.field-meta.xml
<CustomField>
    <fullName>MUSW__isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the setting is included in the POST Request</description>
    <inlineHelpText>Determines if the setting is included in the POST Request</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>