force-app/main/default/objects/MUSW__RESTSettingFields_Push__c/fields/MUSW__isId__c.field-meta.xml
<CustomField>
    <fullName>MUSW__isId__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the destination field is a unique ID field</description>
    <inlineHelpText>Determines if the destination field is a unique ID field</inlineHelpText>
    <label>Unique Identifier</label>
    <type>Checkbox</type>
</CustomField>