force-app/main/default/objects/MUSW__RESTSettingFields_Push__c/fields/MUSW__Mapped_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Mapped_Object_Name__c</fullName>
    <description>API name of the mapped object (e.g. MUSW__Parcel__c)</description>
    <inlineHelpText>API name of the mapped object (e.g. MUSW__Parcel__c)</inlineHelpText>
    <label>Mapped Object Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>