force-app/main/default/objects/MUSW__RESTSettingFields_Push__c/fields/MUSW__REST_Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__REST_Setting_Name__c</fullName>
    <description>Name of the associated REST Setting</description>
    <inlineHelpText>Name of the associated REST Setting</inlineHelpText>
    <label>REST Setting Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>