force-app/main/default/objects/MUSW__RESTSettingFields_Push__c/fields/MUSW__Transform_Instructions__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Transform_Instructions__c</fullName>
    <description>Uses MS Access formulas to specify the source-to-dest data transformation. To concatenate text/values use the CONCAT function. eg. CONCAT(field1, " ", REPLACE(field2, "xx", "")). All fields referenced here must be from the Mapped Object</description>
    <inlineHelpText>Uses MS Access formulas to specify the source-to-dest data transformation. To concatenate text/values use the CONCAT function. eg. CONCAT(field1, " ", REPLACE(field2, "xx", "")). All fields referenced here must be from the Mapped Object</inlineHelpText>
    <label>Transform Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>